--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,45 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block preloadjs %}
-    <script>
-        var basketCookie = '{{ cookie_key }}'; // Credit: https://stackoverflow.com/questions/8683922/how-can-i-pass-my-context-variables-to-a-javascript-file-in-django
-        console.log(basketCookie)
-         // Credit: https://www.w3schools.com/js/js_cookies.asp
-        function setCookie(cname,cvalue,exdays) {
-            var d = new Date();
-            d.setTime(d.getTime() + (exdays*24*60*60*1000));
-            var expires = "expires=" + d.toGMTString();
-            document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
-        }
-
-        function getCookie(cname) {
-            var name = cname + "=";
-            var ca = document.cookie.split(';');
-            for(var i = 0; i < ca.length; i++) {
-                var c = ca[i];
-                while (c.charAt(0) == ' ') {
-                    c = c.substring(1);
-                }
-                if (c.indexOf(name) == 0) {
-                    return c.substring(name.length, c.length);
-                }
-            }
-            return "";
-        }
-
-        function createCookie() {
-            var existing = getCookie(basketCookie);
-            if (existing != "" && existing != null) {
-                return;
-            } else {
-                var cookieValue = (Math.random()*100000000).toFixed(0);
-                setCookie(basketCookie, cookieValue, 365);
-            }
-        }
-    </script>
-{% endblock %}
-
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -134,4 +95,43 @@
             </div>
         </div>
     </section>
+{% endblock %}
+
+{% block postloadjs %}
+    <script>
+        var basketCookie = '{{ cookie_key }}'; // Credit: https://stackoverflow.com/questions/8683922/how-can-i-pass-my-context-variables-to-a-javascript-file-in-django
+
+         // Credit: https://www.w3schools.com/js/js_cookies.asp
+        function setCookie(cname,cvalue,exdays) {
+            var d = new Date();
+            d.setTime(d.getTime() + (exdays*24*60*60*1000));
+            var expires = "expires=" + d.toGMTString();
+            document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+        }
+
+        function getCookie(cname) {
+            var name = cname + "=";
+            var ca = document.cookie.split(';');
+            for(var i = 0; i < ca.length; i++) {
+                var c = ca[i];
+                while (c.charAt(0) == ' ') {
+                    c = c.substring(1);
+                }
+                if (c.indexOf(name) == 0) {
+                    return c.substring(name.length, c.length);
+                }
+            }
+            return "";
+        }
+
+        function createCookie() {
+            var existing = getCookie(basketCookie);
+            if (existing != "" && existing != null) {
+                return;
+            } else {
+                var cookieValue = (Math.random()*100000000).toFixed(0);
+                setCookie(basketCookie, cookieValue, 365);
+            }
+        }
+    </script>
 {% endblock %}
