--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -106,10 +106,11 @@
                                                 <div class="product-text-header bold">£{{ basket.total_price }}</div>
                                             </div>
                                             <div class="col-4 my-auto py-auto">
-                                                <a class="edit-button border-solid masthead-button btn btn-primary js-scroll-trigger" href="">
-                                                        <i class="fas fa-edit" aria-hidden="true"></i> edit</a>
+                                                <a class="edit-button border-solid masthead-button btn btn-primary js-scroll-trigger" 
+                                                    href="{% url 'edit_product' %}?item_number={{ basket.item_number }}">{{ product.name }}
+                                                    <i class="fas fa-edit" aria-hidden="true"></i> edit</a>
                                                 <a class="delete-button border-solid masthead-button btn btn-primary js-scroll-trigger" href="">
-                                                        <i class="fas fa-trash-alt" aria-hidden="true"></i> remove</a>
+                                                    <i class="fas fa-trash-alt" aria-hidden="true"></i> remove</a>
                                             </div>
                                         </div>
                                         <hr>
