--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -17,7 +17,9 @@
             <div class="row justify-content-center no-gutters">
                 <div class="col-xl-12">
                     {% if category %}
-                        <div class="product-text-one mx-auto text-uppercase text-center flex-margin-b"><a class="text-blue" href="{% url 'products' %}?category={{ category }}">{{ category }}</a></div>
+                        <div class="product-text-one mx-auto text-uppercase text-center flex-margin-b">
+                            <a class="text-blue" href="{% url 'products' %}?category={{ category }}">{{ category }}</a>
+                        </div>
                     {% else %}
                         <h1 class="product-text-one mx-auto text-uppercase text-center flex-margin-b text-blue">Error</h1>
                     {% endif %}
@@ -25,82 +27,130 @@
                 <div class="col-xl-6">
                     {% if category %}
                         {% for image in image %}
-                            <img class="img-fluid image-80" src="{{ image.image }}" alt="{{ category }} image" /></div>
+                            <img class="img-fluid image-80" src="{{ image.image }}" alt="{{ category }} image" />
                         {% endfor %}
                     {% else %}
-                        <img class="img-fluid image-80" src="/media/assets/img/pexels-kaboompics-com-5928.jpg" alt="salad bowl" /></div>
+                        <img class="img-fluid image-80" src="/media/assets/img/pexels-kaboompics-com-5928.jpg" alt="salad bowl" />
                     {% endif %}
+                </div>
                 <div class="col-xl-6">
                     <div class="text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="product-container w-100 mt-0 text-center text-xl-left">
                                 {% for product in products %}
-                                    <div class="product-text-header mx-auto flex-margin-b text-blue">{{ product.name }}</div>
-                                    <div class="product-text-two mx-auto flex-margin-b text-blue">{{ product.description }}</div>
+                                    <div class="product-text-header mx-auto flex-margin-b text-blue">
+                                        {{ product.name }}
+                                    </div>
+                                    <div class="product-text-two mx-auto flex-margin-b text-blue">
+                                        {{ product.description }}
+                                    </div>
                                 {% endfor %}
-                                <div class="text-blue text-xs mb-2">Choose from the options below...</div>
+                                <div class="text-blue text-xs mb-2">
+                                    Choose from the options below...
+                                </div>
                                 <div class="row">
                                     <div class="col-4">
                                         {% if selected == "selected-one" %}
                                             {% for option in options %}
-                                                <a class="product-selected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-one">{{ option.option1 }}</a>
+                                                <a class="product-selected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
+                                                    href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-one">
+                                                    {{ option.option1 }}</a>
                                             {% endfor %}
                                         {% else %}
                                             {% for option in options %}
-                                                <a class="product-unselected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-one">{{ option.option1 }}</a>
+                                                <a class="product-unselected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
+                                                    href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-one">
+                                                    {{ option.option1 }}</a>
                                             {% endfor %}
                                         {% endif %}
                                     </div>
                                     <div class="col-4">
                                         {% if selected == "selected-two" %}
                                             {% for option in options %}
-                                                <a class="product-selected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-two">{{ option.option2 }}</a>
+                                                <a class="product-selected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
+                                                    href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-two">
+                                                    {{ option.option2 }}</a>
                                             {% endfor %}
                                         {% else %}
                                             {% for option in options %}
-                                                <a class="product-unselected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-two">{{ option.option2 }}</a>
+                                                <a class="product-unselected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
+                                                    href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-two">
+                                                    {{ option.option2 }}</a>
                                             {% endfor %}
                                         {% endif %}
                                     </div>
                                     <div class="col-4">
                                         {% if selected == "selected-three" %}
                                             {% for option in options %}
-                                                <a class="product-selected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-three">{{ option.option3 }}</a>
+                                                <a class="product-selected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
+                                                    href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-three">
+                                                    {{ option.option3 }}</a>
                                             {% endfor %}
                                         {% else %}
                                             {% for option in options %}
-                                                <a class="product-unselected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-three">{{ option.option3 }}</a>
+                                                <a class="product-unselected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
+                                                    href="{% url 'product_detail' %}?category_product={{ category }},{{ product }},selected-three">
+                                                    {{ option.option3 }}</a>
                                             {% endfor %}
                                         {% endif %}
                                     </div>
                                     <div class="col-12 mt-3 slidecontainer">
                                         <div class="text-blue text-xs mb-2">Select number of servings ...</div>
-                                        <input type="range" min="1" max="10" value="1" class="slider" id="myRange">
+                                        {% if servings %}
+                                            <input type="range" min="1" max="10" value="{{ servings }}" class="slider" id="myRange">
+                                        {% else %}
+                                            <input type="range" min="1" max="10" value="1" class="slider" id="myRange">
+                                        {% endif %}
                                         <p class="text-blue text-xs mb-2">Servings: <span id="demo"></span></p>
                                     </div>
                                     <div class="col-4 flex-margin-t">
                                         {% for product in products %}
-                                            <div class="text-blue text-xs">per serving</div>
-                                            <div id="serving-price"  class="price-button border-solid js-scroll-trigger flex-margin-b bold">£{{ product.price }}</div>
+                                            <div class="text-blue text-xs">
+                                                per serving
+                                            </div>
+                                            <div id="serving-price"  class="price-button border-solid js-scroll-trigger flex-margin-b bold">
+                                                £{{ product.price }}
+                                            </div>
                                         {% endfor %}
                                     </div>
                                     <div class="col-4 flex-margin-t">
                                         {% for product in products %}
-                                            <div class="text-blue text-xs">Total price</div>
-                                            <div id="total-price" class="price-button border-solid js-scroll-trigger flex-margin-b bold">£{{ product.price }}</div>
+                                            <div class="text-blue text-xs">
+                                                Total price
+                                            </div>
+                                            <div id="total-price" class="price-button border-solid js-scroll-trigger flex-margin-b bold">
+                                                £{{ product.price }}
+                                            </div>
                                         {% endfor %}
                                     </div>
                                     <div class="col-4 flex-margin-t">
-                                        <div class="text-blue text-xs">Add to</div>
-                                        <form action="{% url 'basket' %}?product_options={{ category }},{{ product }},{{ selected }}" method="post">
-                                            {% csrf_token %}
-                                            <div>
-                                                <input type="text" name="servings" id="servings" class="hidden" value="1">
-                                                <button type="submit" class="product-selected border-solid masthead-button btn btn-primary js-scroll-trigger flex-margin-b">
-                                                    <i class="fa fa-shopping-basket" aria-hidden="true"></i> basket
-                                                </button>
+                                        {% if edit %}
+                                            <div class="text-blue text-xs">
+                                                Update
                                             </div>
-                                        </form>
+                                            <form action="{% url 'basket' %}?product_options={{ category }},{{ product }},{{ selected }},'edit'" method="post">
+                                                {% csrf_token %}
+                                                <div>
+                                                    <input type="text" name="servings" id="servings" class="hidden" value="{{ servings }}">
+                                                    <button type="submit" class="product-selected border-solid masthead-button btn btn-primary js-scroll-trigger flex-margin-b">
+                                                        <i class="fa fa-shopping-basket" aria-hidden="true"></i> basket
+                                                    </button>
+                                                </div>
+                                            </form>
+                                        {% else %}
+                                            <div class="text-blue text-xs">
+                                                Add to
+                                            </div>
+                                            <form action="{% url 'basket' %}?product_options={{ category }},{{ product }},{{ selected }},'add'" method="post">
+                                                {% csrf_token %}
+                                                <div>
+                                                    <input type="text" name="servings" id="servings" class="hidden" value="1">
+                                                    <button type="submit" class="product-selected border-solid masthead-button btn btn-primary js-scroll-trigger flex-margin-b">
+                                                        <i class="fa fa-shopping-basket" aria-hidden="true"></i> basket
+                                                    </button>
+                                                </div>
+                                            </form>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
@@ -108,6 +158,7 @@
                     </div>
                 </div>
             <hr class="d-none d-xl-block mb-0 ml-0">
+            </div>
         </div>
     </section>
 {% endblock %}
