--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10367,13 +10367,16 @@ body {
 .product-unselected {
     opacity: 0.5;
 }
-.delete-button {
+.delete-button, .edit-button  {
     background-color: #EA7276 !important;
     height: 50%;
+    width: 75% !important;
+}
+.delete-button {
+    background-color: #EA7276 !important;
 }
 .edit-button {
     background-color: #9DBA83 !important;
-    height: 50%;
 }
 
 .basket {
