--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10371,6 +10371,7 @@ body {
     background-color: #EA7276 !important;
     height: 50%;
     width: 75% !important;
+    margin: 2px 0;
 }
 .delete-button {
     background-color: #EA7276 !important;
