--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -161,12 +161,7 @@
         // Update the current slider value (each time you drag the slider handle)
         slider.oninput = function() {
         var multiplier = this.value;
-        if (multiplier == 1) {
-            var discount = 1
-        } else {
-            var discount = 1 - ((multiplier * 2) / 100);
-        }
-        var totalPrice = (servingPrice * multiplier * discount).toFixed(2)
+        var totalPrice = (servingPrice * multiplier).toFixed(2)
         output.innerHTML = multiplier;
         servings.value = multiplier;
         $('#total-price').text("£" + totalPrice);
