--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -2,42 +2,6 @@
 {% load static %}
 
 {% block preloadjs %}
-    <script>
-        var basketCookie = '{{ cookie_key }}'; // Credit: https://stackoverflow.com/questions/8683922/how-can-i-pass-my-context-variables-to-a-javascript-file-in-django
-        console.log(basketCookie)
-         // Credit: https://www.w3schools.com/js/js_cookies.asp
-        function setCookie(cname,cvalue,exdays) {
-            var d = new Date();
-            d.setTime(d.getTime() + (exdays*24*60*60*1000));
-            var expires = "expires=" + d.toGMTString();
-            document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
-        }
-
-        function getCookie(cname) {
-            var name = cname + "=";
-            var ca = document.cookie.split(';');
-            for(var i = 0; i < ca.length; i++) {
-                var c = ca[i];
-                while (c.charAt(0) == ' ') {
-                    c = c.substring(1);
-                }
-                if (c.indexOf(name) == 0) {
-                    return c.substring(name.length, c.length);
-                }
-            }
-            return "";
-        }
-
-        function createCookie() {
-            var existing = getCookie(basketCookie);
-            if (existing != "" && existing != null) {
-                return;
-            } else {
-                var cookieValue = (Math.random()*100000000).toFixed(0);
-                setCookie(basketCookie, cookieValue, 365);
-            }
-        }
-    </script>
 {% endblock %}
 
 {% block page_header %}
@@ -49,7 +13,6 @@
 {% endblock %}
 
 {% block content %}
-    <body onload="createCookie()"></body>
     <!-- Produce-->
     <section class="products-section bg-light" id="products">
         <div class="container">
@@ -64,7 +27,7 @@
                     <div class="text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="product-container w-100 mt-0 text-center text-xl-left">
-                                {% if basket_total != "" %}
+                                {% if basket_total.total_price__sum != None %}
                                     <div class="product-text-three mx-auto flex-margin-b text-blue">The items below have been added to your basket...</div>
                                 {% else %}
                                     <div class="product-text-three mx-auto flex-margin-b text-blue">No items have been added to your basket...</div>
@@ -122,7 +85,7 @@
                                     {% endfor %}
                                     <div class="col-12 col-lg-4 my-auto">
                                         <div class="product-text-two mx-auto mb-2 text-blue bold">Basket Total</div>
-                                        {% if basket_total != "" %}
+                                        {% if basket_total.total_price__sum != None %}
                                             <div class="product-text-header bold">£{{ basket_total.total_price__sum|floatformat:"2" }}</div>
                                         {% else %}
                                             <div class="product-text-header bold">£0.00</div>
